--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "nodemailer": "^6.9.15",
     "puppeteer-core": "^23.11.1",
     "qrcode-terminal": "^0.12.0",
+    "resend": "^6.3.0",
     "sharp": "^0.33.5",
     "socket.io": "^4.8.1"
   },
